# NovaCut

./: .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  QUICKSTART_VI.md  README.md  build.bat  build.sh
assets/: README.md
docs/: ARCHITECTURE.md  BUILD.md  CODE_SUMMARY.md
models/: README.md
src/: main.cpp
src/ai/: AIEngine.cpp  AIEngine.h
src/ai/asr/: WhisperASR.cpp  WhisperASR.h
src/ai/ocr/: OCREngine.cpp  OCREngine.h
src/ai/tts/: TTSEngine.cpp  TTSEngine.h
src/core/: Application.cpp  Application.h  Project.cpp  Project.h
src/export/: ExportEngine.cpp  ExportEngine.h
src/media/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  MediaEngine.cpp  MediaEngine.h
src/timeline/: Clip.cpp  Clip.h  Timeline.cpp  Timeline.h  Track.cpp  Track.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/qml/: PreviewView.qml  TimelineView.qml  qml.qrc
src/ui/widgets/: PreviewWidget.cpp  PreviewWidget.h  TimelineWidget.cpp  TimelineWidget.h
